--- a/django_pos/templates/sales/sales_add.html
+++ b/django_pos/templates/sales/sales_add.html
@@ -120,7 +120,7 @@
                                 <div class="form-group">
                                     <label>Amount payed</label>
                                     <div class="input-group">
-                                        <input name="amount_payed" class="form-control" required>
+                                        <input name="amount_payed" class="form-control" placeholder="i.e 10.00" required>
                                     </div>
                                 </div>
 
