--- a/django_pos/templates/productions/sectors.html
+++ b/django_pos/templates/productions/sectors.html
@@ -1,7 +1,7 @@
 {% extends "pos/base.html" %}
 {% load static %}
 <!-- Page title  -->
-{% block title %}production sectors{% endblock title %}
+{% block title %}Production Categories{% endblock title %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
