--- a/django_pos/templates/sales/sales_receipt_pdf.html
+++ b/django_pos/templates/sales/sales_receipt_pdf.html
@@ -53,10 +53,11 @@
 <div class="container-fluid">
     <div class="row border border-dark">
         <div class="col-6">
-            <p class="name-company"><b>E-Corp</b></p>
-            <p><b>135 East 57th Street</b></p>
-            <p><b>New York, NY 10011, USA</b></p>
-            <p><b>Phone:</b> (213) 484-6829</p>
+            <p class="name-company"><b>Katieno Butchery</b></p>
+            <p><b>1516-401007678-Nyalenda </b></p>
+            <p><b>Kisumu, Kenya</b></p>
+            <p><b>Phone:</b> (+254) 712-012-485</p>
+            <p><b>Email:</b> katienoentreprise@gmail.com</p>
         </div>
         <div class="col-6 border-left border-dark">
             <p><b>Date:</b> {{sale.date_added}}</p>
