--- a/django_pos/templates/productions/productions_update.html
+++ b/django_pos/templates/productions/productions_update.html
@@ -28,8 +28,16 @@
                 {% csrf_token %}
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="product">Product</label>
-                        <input type="text" class="form-control" name="name" value="{{production.product.name}}" required>
+                        <label for="product">Product:</label>
+                        <select class="form-control" id="product" name="product">
+                            {% for product in products %}
+                                {% if product.id == production.product.id %}
+                                    <option value="{{ product.id }}" selected>{{ product.name }}</option>
+                                {% else %}
+                                    <option value="{{ product.id }}">{{ product.name }}</option>
+                                {% endif %}
+                            {% endfor %}
+                        </select>
                     </div>
                     <div class="form-group col-md-6">
                         <label for="weight">Weight</label>
@@ -43,18 +51,18 @@
                         <input type="text" name="description" class="form-control" value="{{production.description}}" required>
                     </div>
                     <div class="form-group col-md-4">
-                        <label for="sector">sector</label>
+                        <label for="sector">Sector</label>
                         <select name="sector" class="form-control" required>
                             <option value="" selected disabled hidden>Select the sector</option>
                             {% for sector in sectors %}
-                                {% if production.sector.id == sector.id%}
-                                <option value="{{sector.id}}" selected>{{sector.name}}</option>
+                                {% if production.sector.id == sector.id %}
+                                    <option value="{{sector.id}}" selected>{{sector.name}}</option>
                                 {% else %}
-                                <option value="{{sector.id}}">{{sector.name}}</option>
+                                    <option value="{{sector.id}}">{{sector.name}}</option>
                                 {% endif %}
                             {% endfor %}
                         </select>
-                    </div>
+                    </div>                    
                 </div>
 
                 <div class="form-row">
@@ -67,14 +75,7 @@
                         <input type="number" name="total_price" step="any"  class="form-control" value="{{production.price}}"  required>
                     </div>
                 </div>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="receivedby">receivedby</label>
-                        <input type="number" name="receivedby" step="any"  class="form-control" value="{{production.receivedby}}"  required>
-                    </div>
-                </div>
                 
-
                 <button type="submit" class="btn btn-success font-weight-bold">Update production</button>
                
             </form>
